--- a/MisaCake_Store/MisaCake_Store.csproj
+++ b/MisaCake_Store/MisaCake_Store.csproj
@@ -7,6 +7,40 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <Content Remove="wwwroot\js\bootstrap.js" />
+    <Content Remove="wwwroot\js\custom.js" />
+    <Content Remove="wwwroot\js\jquery-3.4.1.min.js" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <None Include="wwwroot\css\bootstrap.css" />
+    <None Include="wwwroot\css\font-awesome.min.css" />
+    <None Include="wwwroot\css\responsive.css" />
+    <None Include="wwwroot\css\style.css" />
+    <None Include="wwwroot\css\style.css.map" />
+    <None Include="wwwroot\css\style.scss" />
+    <None Include="wwwroot\images\about-img.png" />
+    <None Include="wwwroot\images\c1.jpg" />
+    <None Include="wwwroot\images\c2.jpg" />
+    <None Include="wwwroot\images\c3.jpg" />
+    <None Include="wwwroot\images\client1.jpg" />
+    <None Include="wwwroot\images\client2.jpg" />
+    <None Include="wwwroot\images\favicon.png" />
+    <None Include="wwwroot\images\p1.png" />
+    <None Include="wwwroot\images\p2.png" />
+    <None Include="wwwroot\images\p3.png" />
+    <None Include="wwwroot\images\p4.png" />
+    <None Include="wwwroot\images\p5.png" />
+    <None Include="wwwroot\images\p6.png" />
+    <None Include="wwwroot\images\p7.png" />
+    <None Include="wwwroot\images\p8.png" />
+    <None Include="wwwroot\images\slider-img.png" />
+    <None Include="wwwroot\js\bootstrap.js" />
+    <None Include="wwwroot\js\custom.js" />
+    <None Include="wwwroot\js\jquery-3.4.1.min.js" />
+  </ItemGroup>
+
+  <ItemGroup>
     <PackageReference Include="Microsoft.EntityFrameworkCore" Version="6.0.13" />
     <PackageReference Include="Microsoft.EntityFrameworkCore.Design" Version="6.0.13">
       <PrivateAssets>all</PrivateAssets>
@@ -18,6 +52,10 @@
       <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
     </PackageReference>
     <PackageReference Include="Newtonsoft.Json" Version="13.0.2" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <Folder Include="css\" />
   </ItemGroup>
 
 </Project>
